# pace2018

./: .nfs00000000031c04590000021a  CMakeLists.txt  Makefile  README.md  README.md~  custom1  customInput  fuck  input_parser.cpp  input_parser.h  instance.cpp  instance.h  lol  nice.cpp  nice.cpp~  plot.sh  reductions.cpp  reductions.h  relaxation.cpp  relaxation.h  relaxation2.cpp  relaxation2.h  test_reductions.cpp  tree_decomposition.cpp  tree_decomposition.h
nice_tree/: draw_nice.cc  draw_nice.h  nice.cpp  nice.h
trie/: bell_dp.cc  bell_dp.h  bell_reducer.cc  bell_reducer.h  brute_force.cc  brute_force.h  dsu.cc  dsu.h  fly_dsu.cc  fly_dsu.h  main.cc  main2.cc  order_optimizer.cc  order_optimizer.h  test.in  test2.in  trie.cc  trie.h
